<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AppPortfolio"
    android:id="@+id/linear_layout1"
    android:weightSum="1">

    <TextView android:id="@+id/textView"
        android:text="@string/my_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_weight="0.40" />
    <Button
        style="@style/ButtonDefault"
        android:text="@string/media_streamer"
        android:id="@+id/button1" />
    <Button
        style="@style/ButtonDefault"
        android:text="@string/super_duo1"
        android:id="@+id/button2" />
    <Button
        style="@style/ButtonDefault"
        android:text="@string/super_duo2"
        android:id="@+id/button3" />
    <Button
        style="@style/ButtonDefault"
        android:text="@string/ant_terminator"
        android:id="@+id/button4" />
    <Button
        style="@style/ButtonDefault"
        android:text="@string/materialize"
        android:id="@+id/button5" />
    <Button
        style="@style/ButtonImportant"
        android:text="@string/capstone"
        android:id="@+id/button6" />
</LinearLayout>
